# cafe

./: .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: deploy.yml  release-please.yml  tests.yml
cafe/: __main__.py  api.py  cafe.py  cli.py  config.py  default.toml  main.py
cafe/common/data/: mysql.py
cafe/common/messanger/: pubSub.py
cafe/common/upload-handler/: attachment.py  upload-handler.py
cafe/common/upload_handler/: fileValidation.py  uploadHandler.py
cafe/features/api/: routes.py
cafe/features/parsing/interface/: parsing.py
cafe/features/request_upload/: requestUploadService.py  uploadHandler.py
cafe/features/routes/: routesHandler.py
cafe/features/upload/: requestUploadService.py
src/: cafe.py
tests/: conftest.py  test_cafe.py
