[tool.poetry]
name = "cafe"
version = "0.1.0"
description = "Integrative Complexity analysis in text & social media posts."
authors = ["Christopher Gikas <crgikas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
typer = "^0.12.3"
dynaconf = "^3.2.5"
pytest = "^8.2.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"

[tool.poetry.scripts]
start = "cafe.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
